force-app/main/default/objects/Sample_Lab_Request_Products__c/Sample_Lab_Request_Products__c.object-meta.xml
<CustomObject>
    <label>Sample/Lab Request Products</label>
    <nameField>
        <displayFormat>SLRP-{00000000}</displayFormat>
        <label>Sample/Lab Request Products Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample/Lab Request Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>