force-app/main/default/objects/Sample_Lab_Request_Products__c/fields/Coat_Weight__c.field-meta.xml
<CustomField>
    <fullName>Coat_Weight__c</fullName>
    <label>Coat Weight</label>
    <length>100</length>
    <type>Text</type>
</CustomField>