force-app/main/default/objects/Sample_Lab_Request_Products__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MASSACHUSETTS</fullName>
            </value>
            <value>
                <fullName>NEBRASKA</fullName>
            </value>
            <value>
                <fullName>CALIFORNIA</fullName>
            </value>
            <value>
                <fullName>KANSAS</fullName>
            </value>
            <value>
                <fullName>PENNSYLVANIA</fullName>
            </value>
            <value>
                <fullName>MINNESOTA</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>