force-app/main/default/objects/Sample_Lab_Request_Products__c/fields/Product_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Text__c</fullName>
    <label>Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>