force-app/main/default/objects/Sample_Lab_Request_Products__c/fields/Sample_Lab_Request__c.field-meta.xml
<CustomField>
    <fullName>Sample_Lab_Request__c</fullName>
    <label>Sample/Lab Request</label>
    <referenceTo>Sample_Lab_Request__c</referenceTo>
    <relationshipLabel>Sample/Lab Request Products</relationshipLabel>
    <relationshipName>Sample_Lab_Request_Products</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>