force-app/main/default/objects/Sample_Lab_Request_Products__c/fields/Sample_Product__c.field-meta.xml
<CustomField>
    <fullName>Sample_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Product</label>
    <referenceTo>Sample_Products__c</referenceTo>
    <relationshipLabel>Sample/Lab Request Products</relationshipLabel>
    <relationshipName>Sample_Lab_Request_Products</relationshipName>
    <type>Lookup</type>
</CustomField>