force-app/main/default/objects/Sample_Lab_Request_Products__c/recordTypes/Lab_Request_Products.recordType-meta.xml
<RecordType>
    <fullName>Lab_Request_Products</fullName>
    <active>true</active>
    <label>Lab Request Products</label>
</RecordType>