force-app/main/default/objects/Sample_Lab_Request_Products__c/recordTypes/Sample_Requests_Products.recordType-meta.xml
<RecordType>
    <fullName>Sample_Requests_Products</fullName>
    <active>true</active>
    <label>Sample Requests Products</label>
</RecordType>